# analysis-dashboard

./: .all-contributorsrc  .dockerignore  .gitignore  Dockerfile  README.md  database_connection_example.py  docker-compose.yml  get_data.py  main.py  metrics_data.csv  migrate_to_uv.sh  pyproject.toml  requirements.txt
.github/workflows/: branch_ci.yml  docker-pipeline.yml  docker-pipeline2.yml  docker-pipeline3.yml  dockerbuild.yml  main_ci.yml  pytest.yml
scripts/: get_gsp_and_dno.py
src/: Weather_forecast_on_dashboard.py  adjuster.py  auth.py  batch_page.py  cloudcasting_page.py  data_paths.py  forecast.py  get_data.py  main.py  main_india.py  mlmodel.py  nwp_page.py  pvsite_forecast.py  satellite_forecast.py  satellite_page.py  site_user_page.py  sites_toolbox.py  status.py  users.py  utils.py  version.py  weather_forecast.py  weather_graph.py
src/.streamlit/: config.toml
src/Site_toolbox/: site_group_management.py
src/analysis_dashboard/: version.py
src/assets/css/: status.css
src/data/: dno.py  gsp.py  utils.py
src/dataplatform/: adjuster.py  data.py  forecast.py
src/dataplatform/forecast/: backend.py  cache.py  constanst.py  constant.py  data.py  main.py  plot.py  setup.py
src/dataplatform/toolbox/: clients.py  location.py  main.py  organisation.py  policy.py  user_organisation.py  users.py
src/plots/: all_gsps.py  elexon_plots.py  forecast_horizon.py  mae_and_rmse.py  make_pinball_and_exceedance_plots.py  pinball_and_exceedance_plots.py  ramp_rate.py  users.py  utils.py
src/site_toolbox/: get_details.py  site_group_management.py
src/sites_toolbox/: get_details.py
src/tables/: raw.py  summary.py
terraform/development/: main.tf  variables.tf
terraform/production/: main.tf
tests/: conftest.py  test_data.py  test_dp_forecast_plot.py  test_elexon_plot.py  test_get_data.py  test_main.py  test_pvsite_location.py  test_site_user.py  test_sites_toolbox.py  test_toolbox.py
tests/data/: test_dno_and_gsp.py
tests/integration/: conftest.py  test_adjuster.py  test_dataplatform_toolbox.py  test_locations_ui.py  test_organisations_ui.py  test_policy_ui.py  test_user_org_ui.py  test_users_ui.py
tests/plots/: test_pinball_and_exceedance.py  test_ramp_rate.py  test_users.py
