[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "analysis-dashboard"
version = "0.1.0"
description = "Analysis dashboard for OCF forecasting systems"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair==5.5.0",
    "requests==2.32.3",
    "nowcasting_datamodel==1.7.3",
    "pvsite-datamodel==1.2.14",
    "numpy>=2.0",
    "pandas>=2.2",
    "plotly==5.24.1",
    "psycopg2-binary==2.9.10",
    "SQLAlchemy==2.0.36",
    "streamlit==1.46.1",
    "testcontainers==4.9.0",
    "uvicorn==0.34.0",
    "geopandas==1.0.1",
    "garrett-streamlit-auth0==0.9",
    "pydantic==2.5.3",
    "xarray>=2024.6",
    "fsspec>=2024.6",
    "s3fs>=2024.6",
    "ocf_blosc2==0.0.11",
    "zarr>=3.0,<4.0",
    "elexonpy==1.0.15",
    "fiona>=1.9,<2.0",
    "herbie-data",
    "numcodecs>=0.12,<1.0",
    "torch>=2.0,<3.0",
    "matplotlib>=3.8,<4.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "pyproject.toml",
    "README.md",
]

[tool.uv]
dev-dependencies = [
    "pytest",
    "pytest-cov",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = ["src"]
